[project]
name = "borg_space"
dist-name = "borg-space"
version = "2.1"
description = "Accessory for Emborg used to report and track the size of your Borg repositories"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = ["emborg", "borg", "backups"]
authors = [{name = "Ken Kundert", email = "emborg@nurdletech.com"}]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "appdirs",
    "arrow",
    "docopt",
    "inform",
    "matplotlib",
    "nestedtext",
    "quantiphy",
    "shlib",
    "voluptuous",
]

[project.urls]
homepage = "https://github.com/kenkundert/borg-space"
repository = "https://github.com/kenkundert/borg-space"
documentation = "https://github.com/KenKundert/borg-space/blob/master/README.rst"
changelog = "https://github.com/KenKundert/ntlog/blob/master/CHANGELOG.rst"

[project.scripts]
borg-space = "borg_space.main:main"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
